# DevSecOps2024

./: .gitignore  docker-compose.yml
datum/: .gitattributes  bunbetu-utf8.csv  bunbetu.csv  hiduke.csv  integ_data_11.csv  integrated.csv  split.sh.csv
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Home.tsx  home.module.css
img2txt/: README.md  pyproject.toml
img2txt/src/img2txt/: __init__.py  sample.py
llm/: Dockerfile  Pipfile
server/: Pipfile  main.py
server/cruds/: user.py
server/db/: database.py  models.py
server/llm/: chat.py
server/routers/: chat.py  file.py  obs.py  router.py  user.py
server/schema/: token.py  user.py
server/utils/: auth.py  rag.py
ubuntu/: Dockerfile  requirements.txt
