[project]
name = "img2txt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tea-creats", email = "annihilation0504@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/img2txt"]
